<resources>
    <string name="app_name">Dark Room</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="show">REVEAL</string>
    <string name="insert">INSERT</string>
    <string name="update">MODIFY</string>
    <string name="del">DELETE</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="id">ID</string>
    <string name="dash">My Dashboard</string>
    <string name="items">items</string>
    <string name="tag">Tag</string>
    <string name="iddb">ID DB</string>
    <string name="empty_list">No items to show</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>