<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    tools:context=".basic_activities.Updat">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.077" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName8"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:autofillHints="@string/password"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPersonName"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
            app:layout_constraintVertical_bias="0.110000014" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="#F00"
            android:text="@string/del"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            app:layout_constraintVertical_bias="0.034" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/tag"
            android:inputType="textPersonName"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.792"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.103" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName5"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName6"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName8"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>