<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insertAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    android:fillViewport="true"
    tools:context=".basic_activities.Insert_d">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName2"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2"
            app:layout_constraintVertical_bias="0.476" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextView"
            app:layout_constraintEnd_toStartOf="@+id/autoCompleteTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/autoCompleteTextView"
            app:layout_constraintVertical_bias="0.428" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/tag"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.821"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.14" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#09f"
            android:hapticFeedbackEnabled="true"
            android:text="@string/insert"
            app:iconPadding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
            app:layout_constraintVertical_bias="0.264" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="textPersonName"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/autoCompleteTextView"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="@+id/autoCompleteTextView"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
            app:layout_constraintVertical_bias="0.428" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/insert"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>